remove price line if credits are not applicable

--- a/mapflow/dialogs/static/ui/processing_start_confirmation.ui
+++ b/mapflow/dialogs/static/ui/processing_start_confirmation.ui
@@ -229,7 +229,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="label_7">
+      <widget class="QLabel" name="priceHeader">
        <property name="font">
         <font>
          <weight>75</weight>
